created a download for the Gaia TAP source

--- a/tripsapplication/src/main/resources/com/teamgannon/trips/workbench/DataWorkbenchController.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/workbench/DataWorkbenchController.fxml
@@ -39,6 +39,7 @@
                             <Button onAction="#onAddSource" text="Add Source..."/>
                             <Button onAction="#onRemoveSource" text="Remove"/>
                             <Button onAction="#onDownloadSource" text="Download"/>
+                            <Button onAction="#onCancelTap" text="Cancel Gaia"/>
                             <Separator orientation="VERTICAL"/>
                             <Button onAction="#onRefreshSources" text="Refresh"/>
                         </HBox>
