add planetary systems view pane

--- a/tripsapplication/src/main/resources/com/teamgannon/trips/controller/splitpane/RightPanel.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/controller/splitpane/RightPanel.fxml
@@ -15,6 +15,7 @@
                 <panes>
                     <TitledPane fx:id="datasetsPane" text="DataSets Available" />
                     <TitledPane fx:id="objectsViewPane" text="Objects in View" />
+                    <TitledPane fx:id="planetarySystemsPane" text="Planetary Systems" />
                     <TitledPane fx:id="stellarObjectPane" text="Stellar Object Properties">
                         <content>
                             <ScrollPane fx:id="stellarObjectScrollPane" />
