--- a/tripsapplication/src/main/resources/com/teamgannon/trips/controller/menuBar/ToolsMenu.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/controller/menuBar/ToolsMenu.fxml
@@ -40,4 +40,8 @@
                   onAction="#advancedSearch"
                   text="Select starPositionDescriptors using advanced search.."/>
     </Menu>
+    <SeparatorMenuItem/>
+    <MenuItem mnemonicParsing="false"
+              onAction="#openDataWorkbench"
+              text="Data Workbench..."/>
 </Menu>
